# clinical-converter

./: .gitignore  README.md  cli.py  pyproject.toml
api/: main.py  requirements.txt
backend/: cli.py  hl7_generate.py  openai_client.py  parse_hl7.py  requirements.txt  summarize.py  to_fhir.py  validate_hl7.py
backend/api/: main.py
clinical-converter-frontend/: package-lock.json  package.json
clinical-converter-frontend/src/app/: globals.css  layout.tsx  page.tsx
samples/hl7/: glucose.hl7  max_complex.hl7
tests/: test_fhir_conversion.py  test_parse_hl7.py  test_parse_pv1_evn.py
